MyProject/force-app/main/default/objects/Course_Course__c/Course_Course__c.object-meta.xml
<CustomObject>
    <label>Course - Course</label>
    <nameField>
        <label>Course - Course</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course - Course</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>