MyProject/force-app/main/default/objects/Course_Course__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Phone</type>
</CustomField>