MyProject/force-app/main/default/objects/Course_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Instructor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>